WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111277
Shared Web Workers have an incorrect visible process name
https://bugs.webkit.org/show_bug.cgi?id=111277
Summary
Shared Web Workers have an incorrect visible process name
Sam Weinig
Reported
2013-03-03 14:10:21 PST
Shared Web Workers have an incorrect visible process name
Attachments
Patch
(4.07 KB, patch)
2013-03-03 14:12 PST
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2013-03-03 14:12:25 PST
Created
attachment 191145
[details]
Patch
Sam Weinig
Comment 2
2013-03-03 14:16:53 PST
Committed
r144580
: <
http://trac.webkit.org/changeset/144580
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug