Shared Web Workers have an incorrect visible process name https://bugs.webkit.org/show_bug.cgi?id=111277

Reviewed by Dan Bernstein.

* SharedWorkerProcess/SharedWorkerProcess.cpp:
(WebKit::SharedWorkerProcess::initializeSharedWorkerProcess):
* SharedWorkerProcess/SharedWorkerProcess.h:
(SharedWorkerProcess):
* SharedWorkerProcess/mac/SharedWorkerProcessMac.mm:
(WebKit::SharedWorkerProcess::initializeProcessName):
The SharedWorkerProcess is not an internet plug-in!

Canonical link: https://commits.webkit.org/129629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144580 268f45cc-cd09-0410-ab3c-d52691b4dbfc